[project]
name = "antcal"
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = ["antenna", "DRA", "simulation"]
authors = [{ name = "Atlanswer", email = "atlanswer@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "pyaedt >=0.9",
    "numpy",
    "pandas",
    "matplotlib",
    "pyvista",
    "rich",
]

[project.optional-dependencies]
dev = ["flit", "ruff", "ipython", "ipykernel", "nbformat"]
docs = [
    "sphinx",
    "myst-parser",
    "sphinx-rtd-theme",
    "sphinx-autodoc2",
    "sphinx-copybutton",
    "sphinx-autobuild",
]

[project.urls]
Homepage = "https://github.com/atlanswer/AntCal"
Repository = "https://github.com/atlanswer/AntCal.git"
Documentation = "https://github.com/atlanswer/AntCal#readme"
Issues = "https://github.com/atlanswer/AntCal/issue"

# [project.scripts]
# cli-name = ""

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
