[project]
name = "antcal"
dynamic = ["version"]
description = "AntCal python module"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Atlanswer", email = "atlanswer@gmail.com" }]
keywords = ["antenna", "DRA", "simulation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Science/Research",
]

[project.urls]
Homepage = "https://github.com/atlanswer/AntCal"
Repository = "https://github.com/atlanswer/AntCal.git"
Documentation = "https://github.com/atlanswer/AntCal#readme"
Issues = "https://github.com/atlanswer/AntCal/issue"

dependencies = [
    "rich>=13.9.4",
]

[dependency-groups]
dev = [
    "antcal",
    "flit>=3.11.0",
    "ipykernel>=6.29.5",
    "ipython>=9.0.0",
    "keyring>=25.6.0",
    "nbformat>=5.10.4",
    "ruff>=0.9.9",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
]
pyaedt = [
    "pyaedt>=0.15.0",
    "pyvista>=0.44.2",
]
docs = [
    "myst-parser>=4.0.0",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-autodoc2>=0.5.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx>=8.2.0",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownVariableType = "warning"

[tool.uv.sources]
antcal = { workspace = true }

