[project]
name = "figure"
dynamic = ["version", "description"]
readme = "../README.md"
requires-python = ">=3.12"
license = { file = "../../LICENSE" }
authors = [{ name = "Atlanswer", email = "atlanswer@gmail.com" }]

[project.urls]
Homepage = "https://github.com/atlanswer/AntCal"
Repository = "https://github.com/atlanswer/AntCal.git"
Documentation = "https://github.com/atlanswer/AntCal#readme"
Issues = "https://github.com/atlanswer/AntCal/issue"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"
